--- a/build.gradle
+++ b/build.gradle
@@ -5,19 +5,23 @@ repositories {
 }
 
 dependencies {
-    compile (
-        'com.amazonaws:aws-lambda-java-core:1.1.0',
-        'com.amazonaws:aws-lambda-java-events:1.1.0',
-        'com.amazonaws.resources:aws-resources:0.0.3'
+    compile(
+            'com.amazonaws:aws-lambda-java-core:1.1.0',
+            'com.amazonaws:aws-lambda-java-events:1.1.0',
+            'com.amazonaws.resources:aws-resources:0.0.3',
+            'org.slf4j:slf4j-api:1.7.21'
+    )
+    runtime(
+            'org.slf4j:slf4j-simple:1.7.21'
     )
 }
 
 task buildZip(type: Zip) {
     from compileJava
-    from processResources              
+    from processResources
     into('lib') {
         from configurations.runtime
-    }           
+    }
 }
 
 build.dependsOn buildZip
