--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ dependencies {
             'com.amazonaws:aws-lambda-java-core:1.1.0',
             'com.amazonaws:aws-lambda-java-events:1.1.0',
             'com.amazonaws.resources:aws-resources:0.0.3',
+            'com.amazonaws:aws-java-sdk-lambda:1.11.27',
             'org.slf4j:slf4j-api:1.7.21'
     )
     runtime(
